--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2 class="heading">About<span> Me</span></h2>
 
         <div class="about-img">
-            <img src="../Assets/about2.png" alt="">
+            <img src="about2.png" alt="">
             <!--<span class="circle-spin"></span>-->
         </div>
 
