--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header class="header">
         <a href="#" class="logo">Krut!k</a>
 
-        
+        <div class="bx bx-menu" id="menu-icon"></div>
+
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
